tests/snapshots/snapshots/snapshots__snapshots__cli_output__blocked_output.snap
---
source: tests/snapshots/cli_output.rs
expression: normalize_output(&output.stdout)
---

🚫 Blocked issues (2):

[● P2] ID-REDACTED: User model
  Blocked by 1 open dependencies: [ID-REDACTED]
[● P2] ID-REDACTED: Auth module
  Blocked by 1 open dependencies: [ID-REDACTED]
