tests/snapshots/snapshots/snapshots__snapshots__cli_output__info_no_beads_dir.snap
---
source: tests/snapshots/cli_output.rs
expression: normalized
---
error: unrecognized subcommand 'info'

Usage: br [OPTIONS] <COMMAND>

For more information, try '--help'.
