tests/snapshots/snapshots/snapshots__snapshots__cli_output__label_list_output.snap
---
source: tests/snapshots/cli_output.rs
expression: normalize_output(&output.stdout)
---
Labels for ID-REDACTED:
  backend
  urgent
