tests/snapshots/snapshots/snapshots__snapshots__cli_output__list_with_issues.snap
---
source: tests/snapshots/cli_output.rs
expression: normalize_output_with_age_masking(&output.stdout)
---
○ ID-REDACTED [● P2] [task] AGE       - Task: Update docs
○ ID-REDACTED [● P2] [task] AGE       - Feature: Add dark mode
○ ID-REDACTED [● P2] [task] AGE       - Bug: Fix login
