tests/snapshots/snapshots/snapshots__snapshots__cli_output__reopen_output.snap
---
source: tests/snapshots/cli_output.rs
expression: normalize_output(&output.stdout)
---
✓ Reopened ID-REDACTED: Issue to reopen
