tests/snapshots/snapshots/snapshots__snapshots__cli_output__search_output.snap
---
source: tests/snapshots/cli_output.rs
expression: normalize_output_with_age_masking(&output.stdout)
---
Found 2 issue(s) matching 'login'
○ ID-REDACTED [● P2] [task] AGE       - User login flow improvement
○ ID-REDACTED [● P2] [task] AGE       - Authentication bug in login
